--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,21 +5,25 @@ on:
     types:
       - opened
       - closed
-  create:
+  push:
     branches:
-      - '*'
+      - 'dev'
+      - 'main'
+
+permissions:
+  contents: read
+  projects: write
 
 jobs:
   manage-project-card:
     runs-on: ubuntu-latest
     steps:
-      - name: Automatic Card Creation on Branch
-        if: github.event_name == 'create' && github.event.ref_type == 'branch'
-        uses: actions/github-script@v6
+      - name: Move PR to In Progress
+        uses: actions/github-script@v7
+        if: github.event_name == 'pull_request' && github.event.action == 'opened'
         with:
           github-token: ${{secrets.GITHUB_TOKEN}}
           script: |
-            const branchName = context.payload.ref;
             const projects = await github.rest.projects.listForOrg({
               org: context.repo.owner
             });
@@ -36,19 +40,17 @@ jobs:
               if (inProgressColumn) {
                 await github.rest.projects.createCard({
                   column_id: inProgressColumn.id,
-                  note: `A11Y iniciado: ${branchName} por @${context.actor}`
+                  note: `PR Abierto: ${context.payload.pull_request.title} por @${context.payload.pull_request.user.login}`
                 });
               }
             }
 
-      - name: Move to Done on PR Merge
+      - name: Move PR to Done
+        uses: actions/github-script@v7
         if: github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged == true
-        uses: actions/github-script@v6
         with:
           github-token: ${{secrets.GITHUB_TOKEN}}
           script: |
-            const prTitle = context.payload.pull_request.title;
-            const prAuthor = context.payload.pull_request.user.login;
             const projects = await github.rest.projects.listForOrg({
               org: context.repo.owner
             });
@@ -65,7 +67,7 @@ jobs:
               if (doneColumn) {
                 await github.rest.projects.createCard({
                   column_id: doneColumn.id,
-                  note: `A11Y completado: ${prTitle} por @${prAuthor}`
+                  note: `PR Completado: ${context.payload.pull_request.title} por @${context.payload.pull_request.user.login}`
                 });
               }
             }
